--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header >
-            <a href='index'>TonyExpress</a>
+            <a href='index.html'>TonyExpress</a>
            <h1 style='text-align:center'>Hãy đọc những tin tức vui vẻ</h1> 
         </header>
         <nav>
