--- a/index.html
+++ b/index.html
@@ -10,7 +10,31 @@
            <h1 style='text-align:center'>Hãy đọc những tin tức vui vẻ</h1> 
         </header>
         <nav>
-            
+            <a href='thoisu/thoisu.html'>Thời sự</a> |
+            <a href='gocnhin/gocnhin.html'>Góc nhìn</a> |
+            <a href='thegioi/thegioi.html'>Thế giới</a>
         </nav>
+        <main>
+            <table>
+                <tr>
+                    <td>
+                        <img src='covid_19.jpg'/>
+                    </td>
+                    <td>
+                        <a href='covid_19.html'><h2>Số ca nhiểm ở TP HCM vượt 5.000<br/></h2></a>
+                        Với 714 ca nhiễm được công bố hôm 3/7,<br/>
+                         số ca bệnh tại TP HCM vượt 5.000 - đây<br/> 
+                         là tình huống nghiêm trọng trong kịch<br/> 
+                         bản ứng phó thành phố đặt ra vào giữa tháng 5.<br/>
+                        Thời điểm TP HCM xây dựng 3 kịch bản (dưới 100 <br/>
+                        ca; 1.000 ca; 5.000 ca) ...
+                    </td>
+                </tr>
+            </table>
+        
+        </main>
+        <footer>
+            Copyright © 2021 Tintuc24h
+        </footer>
     </body>
 </html>
