--- a/thoisu/thoisu.html
+++ b/thoisu/thoisu.html
@@ -15,7 +15,7 @@
             <a href='thegioi/thegioi.html'>Thế giới</a>
         </nav>
         <main>
-            <img src='covid_2'/>
+         <img src='covid_2.jpg'/>
             <h2>TP HCM thí điểm cách<br/>
                  ly F1 tại nhà theo<br/>
                   'công thức 14-14'</h2><br/>
