--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </table>
         
         </main>
-        <footer>
+        <footer style='text-align: center;'>
             Copyright © 2021 Tintuc24h
         </footer>
     </body>
