--- a/thoisu/thoisu.html
+++ b/thoisu/thoisu.html
@@ -21,9 +21,9 @@
                         <img src='covid_2.jpg'/>   
                     </td>
                     <td>
-                        <a href='covid_2.html'><h2>TP HCM thí điểm cách<br/></a>
-                            ly F1 tại nhà theo<br/>
-                             'công thức 14-14'</h2><br/>
+                        <a href='covid_2.html'><h2>TP HCM thí điểm cách<br/>ly F1 tại nhà theo<br/>
+                            'công thức 14-14'</h2><br/></a>
+                            
                              TP HCM sẽ thực hiện<br/>
                               linh hoạt việc thí<br/>
                                điểm cách ly F1 tại<br/>
