--- a/gocnhin/gocnhin.html
+++ b/gocnhin/gocnhin.html
@@ -11,15 +11,15 @@
                 
             </header>
             <nav>
-                <a href='thoisu/thoisu.html'>Thời sự</a> |
-                <a href='gocnhin/gocnhin.html'>Góc nhìn</a> |
-                <a href='thegioi/thegioi.html'>Thế giới</a>
+                <a href='../thoisu/thoisu.html'>Thời sự</a> |
+                <a href='../gocnhin/gocnhin.html'>Góc nhìn</a> |
+                <a href='../thegioi/thegioi.html'>Thế giới</a>
             </nav>
             <main>
                 <table>
                     <tr>
                         <td>
-                            Sài gòn thấm mệt<br/>
+                            <a href='covid_4'><h2>Sài gòn thấm mệt<br/></h2></a>
                             Sài Gòn vốn sáng rực và tấp nập, nhưng phần hồn<br/>
                              của thành phố là đời sống cư dân đa phần trong hẻm,<br/>
                               giờ ngấm​ mệt.
