--- a/thoisu/thoisu.html
+++ b/thoisu/thoisu.html
@@ -10,14 +10,14 @@
             
         </header>
         <nav>
-            <a href='thoisu/thoisu.html'>Thời sự</a> |
-            <a href='gocnhin/gocnhin.html'>Góc nhìn</a> |
-            <a href='thegioi/thegioi.html'>Thế giới</a>
+            <a href='../thoisu/thoisu.html'>Thời sự</a> |
+            <a href='../gocnhin/gocnhin.html'>Góc nhìn</a> |
+            <a href='../thegioi/thegioi.html'>Thế giới</a>
         </nav>
         <main>
             <table>
                 <tr>
-                    <td>
+                    <td>s
                         <img src='covid_2.jpg'/>   
                     </td>
                     <td>
