--- a/gocnhin/gocnhin.html
+++ b/gocnhin/gocnhin.html
@@ -19,7 +19,7 @@
                 <table>
                     <tr>
                         <td>
-                            <a href='covid_4'><h2>Sài gòn thấm mệt<br/></h2></a>
+                            <a href='covid_4.html'><h2>Sài gòn thấm mệt<br/></h2></a>
                             Sài Gòn vốn sáng rực và tấp nập, nhưng phần hồn<br/>
                              của thành phố là đời sống cư dân đa phần trong hẻm,<br/>
                               giờ ngấm​ mệt.
