--- a/thegioi/thegioi.html
+++ b/thegioi/thegioi.html
@@ -21,7 +21,7 @@
                     <img src='covid_5.jpg'/>
                 </td>
                 <td>
-                    <a href='covid_3'><h2>Hàng trăm nhân viên<br/>
+                    <a href='covid_3.html'><h2>Hàng trăm nhân viên<br/>
                         y tế Australia bị cách<br/> 
                         ly<br/></h2></a>
                      Hơn 600 nhân viên y tế tại hai bệnh<br/> 
