--- a/gocnhin/gocnhin.html
+++ b/gocnhin/gocnhin.html
@@ -3,6 +3,7 @@
         <title>
             Góc nhìn
         </title>
+        <link href="../style.css"  rel="stylesheet" media="screen,print" />  
     </head>
     <body>
         
