--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>
             Tin tức 24h
         </title>
+        <link href="style.css"  rel="stylesheet" media="screen,print" />  
     </head>
     <body>
         <header >
@@ -22,12 +23,13 @@
                     </td>
                     <td>
                         <a href='covid_19.html'><h2>Số ca nhiểm ở TP HCM vượt 5.000<br/></h2></a>
+                        <div id='noidung'>
                         Với 714 ca nhiễm được công bố hôm 3/7,<br/>
                          số ca bệnh tại TP HCM vượt 5.000 - đây<br/> 
                          là tình huống nghiêm trọng trong kịch<br/> 
                          bản ứng phó thành phố đặt ra vào giữa tháng 5.<br/>
                         Thời điểm TP HCM xây dựng 3 kịch bản (dưới 100 <br/>
-                        ca; 1.000 ca; 5.000 ca) ...
+                        ca; 1.000 ca; 5.000 ca) ...</div>
                     </td>
                 </tr>
             </table>
