--- a/thegioi/thegioi.html
+++ b/thegioi/thegioi.html
@@ -3,6 +3,7 @@
       <title>
           Thế Giới
       </title>
+      <link href="../style.css"  rel="stylesheet" media="screen,print" />  
   </head>
   <body>
     <header >
