--- a/thoisu/thoisu.html
+++ b/thoisu/thoisu.html
@@ -3,6 +3,7 @@
         <title>
             Thời sự
         </title>
+        <link href="../style.css"  rel="stylesheet" media="screen,print" />  
     </head>
     <body>
         <header >
