--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href='thoisu/thoisu.html'>Thời sự</a> |
             <a href='gocnhin/gocnhin.html'>Góc nhìn</a> |
             <a href='thegioi/thegioi.html'>Thế giới</a>
+            <a href='hoaanhdao.html'>Hoa anh đào</a>
         </nav>
         <main>
             <table>
