--- a/xinviec.html
+++ b/xinviec.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <header>
-            <h1>Nguyễn Mỹ Nga</h1>
-            Chuyên viên dịch vụ ATM
+            <h1 style='margin-left: 50px;'>Nguyễn Mỹ Nga</h1>
+            <div style='margin-left: 50px'>Chuyên viên dịch vụ ATM</div>
         </header>
         <main>
             <div id='left'>
@@ -57,56 +57,56 @@
             -Thích xem phim, thể thao đặc biệt là đá bóng.
             </div><br/><br/>
             <div id='right'>
-                <img src='cogai.jpg'/><br/><br/>
+                <img style='margin-left: 30px;' src='cogai.jpg'/><br/><br/>
                 
                 <h2><img src='icon6.png'/>Thông tin cá nhân</h2><hr/>
-                Địa chỉ<br/>
+                <b>Địa chỉ<br/></b>
                 Hà Nội<br/><br/>
-                Điện thoại<br/>
+                <b>Điện thoại<br/></b>
                  098 999 0009<br/><br/>
-                 Email<br/>
+                 <b>Email<br/></b>
                  your-mall@google.com<br/><br/>
-                 Ngày sinh<br/>
+                 <b>Ngày sinh<br/></b>
                  03/02/2012<br/><br/>
-                 Giới tính<br/>
+                 <b>Giới tính<br/></b>
                  Nữ<br/><br/>
                  
                  <h2><img src='icon7.png'/>Kỹ năng</h2><hr/>
                  <table>
                      <tr>
                          <td>
-                             Tiếng anh
+                             <b>Tiếng anh</b>
                          </td>
                          <td>
-                             <img src='dot.png'/>
-                             <img src='dot.png'/>
-                             <img src='dot.png'/>
-                             <img src='dot2.png'/>
-                             <img src='dot2.png'/>
+                             <img src='dot.png' width='20px' height="20px"/>
+                             <img src='dot.png' width='20px' height="20px"/>
+                             <img src='dot.png' width='20px' height="20px"/>
+                             <img src='dot2.png'width='20px' height="20px"/>
+                             <img src='dot2.png'width='20px' height="20px"/>
                          </td>
                      </tr>
                      <tr>
                         <td>
-                            Tin học
+                            <b>Tin học</b>
                         </td>
                         <td>
-                            <img src='dot.png'/>
-                            <img src='dot.png'/>
-                            <img src='dot.png'/>
-                            <img src='dot.png'/>
-                            <img src='dot2.png'/>
+                            <img src='dot.png'width='20px' height="20px"/>
+                            <img src='dot.png'width='20px' height="20px"/>
+                            <img src='dot.png'width='20px' height="20px"/>
+                            <img src='dot.png'width='20px' height="20px"/>
+                            <img src='dot2.png'width='20px' height="20px"/>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            Giao tiếp
+                            <b>Giao tiếp</b>
                         </td>
                         <td>
-                            <img src='dot.png'/>
-                            <img src='dot.png'/>
-                            <img src='dot.png'/>
-                            <img src='dot.png'/>
-                            <img src='dot2.png'/>
+                            <img src='dot.png'width='20px' height="20px">
+                            <img src='dot.png'width='20px' height="20px"/>
+                            <img src='dot.png'width='20px' height="20px"/>
+                            <img src='dot.png'width='20px' height="20px"/>
+                            <img src='dot2.png'width='20px' height="20px"/>
                         </td>
                     </tr>
                  </table>
@@ -114,14 +114,14 @@
                  <table>
                      <tr>
                          <td>
-                             Photoshop
+                             <b>Photoshop</b>
                          </td>
                          <td>
-                             <img src='dot.png'/>
-                             <img src='dot2.png'/>
-                             <img src='dot2.png'/>
-                             <img src='dot2.png'/>
-                             <img src='dot2.png'/>
+                             <img src='dot.png'width='20px' height="20px"/>
+                             <img src='dot2.png'width='20px' height="20px"/>
+                             <img src='dot2.png'width='20px' height="20px"/>
+                             <img src='dot2.png'width='20px' height="20px"/>
+                             <img src='dot2.png'width='20px' height="20px"/>
                          </td>
                      </tr>
                  </table>
