--- a/baitap/bai13b.html
+++ b/baitap/bai13b.html
@@ -132,10 +132,10 @@
                 </tr>
                 <tr>
                     <td>
-                        
+                       <label>Avatar</label> 
                     </td>
                     <td>
-                        
+                      <input type="file" name="avatar"/>  
                     </td>
                 </tr>
                 <tr>
