--- a/xinviec5.html
+++ b/xinviec5.html
@@ -11,12 +11,12 @@
     <header>
         <table>
             <tr>
-                <td>
+                <td width=220px>
                     <img id='avthuong' src='mehuong.jpg'/>
                 </td>
                 <td>
                     <h1>Nguyễn Thị Hương</h1>
-                    Giáo viên Tiếng Anh<br/>
+                    <h3>Giáo viên Tiếng Anh</h3>
                     <div id="ph1">
                         <img id='icon' src='icon 9.png'/>
                             14/10/1983<br/>
